[project]
name = "pytools"
version = "1.1.0a"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
description = "Basic tools for Python development"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 1 - Beta",
]
dependencies = ["matplotlib>=3.10.5", "numpy>=2.3.2"]

[tool.uv.sources]
pytools = { workspace = true }

[tool.uv.build-backend]
namespace = true

[tool.pyright]
typeCheckingMode = "basic"
